Bug 441544 - .m3u file opens in Elisa, but an invalid entry is added to the Playlist rather than all the songs listed in the file
Summary: .m3u file opens in Elisa, but an invalid entry is added to the Playlist rathe...
Status: RESOLVED FIXED
Alias: None
Product: Elisa
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Matthieu Gallien
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-08-25 19:44 UTC by empyreal
Modified: 2021-12-01 17:53 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.04
Sentry Crash Report:


Attachments
Elisa UI (171.16 KB, image/png)
2021-08-25 19:44 UTC, empyreal
Details
Playlist opened in Elisa (299.59 KB, image/png)
2021-09-11 15:16 UTC, empyreal
Details

Note You need to log in before you can comment on or make changes to this bug.
Description empyreal 2021-08-25 19:44:20 UTC
Created attachment 141048 [details]
Elisa UI

Open Dolphin or any file manager. Click playlist.
Elisa 21.11.70 opens with last status view and playlist not loaded into Playlist window.
Sometimes it opens with empty playlist.
Sometimes it opens like on screenshot.

Elisa looks and feels nice. I am even starting to like Playlist window, but it is buggy as hell. Player is 3 or more years in development. Considering such bugs are still present, people do not use it and don’t actively report or creators simply don’t care =)
Comment 1 Nate Graham 2021-08-26 19:11:34 UTC
> Open Dolphin or any file manager. Click playlist.
I'm not sure what this means. There is no "Playlist" functionality in Dolphin. Can you clarify? Are you opening a music file from Dolphin in Elisa? Or many music files from Dolphin in Elisa? Or something else?


> Considering such bugs are still present, people do not use it and don’t actively
> report or creators simply don’t care =)
I'm not sure what exactly you were hoping to achieve with this, but here's a life pro tip: when you're asking people to do work for free, insulting them and their work may not be the most effective means of accomplishing that goal. ;-)
Comment 2 empyreal 2021-08-26 19:32:54 UTC
Right click => Elisa or simply Enter on playlist and Elisa opens.

I have no hopes and do not ask anything personally for me.
I like this player and want basic improvement at least. I even started digging Qt because of it. It simply looks strange and funny for me that basic functions do not work. I appreciate people and respect their effort but let's be honest, not complaisant.
Comment 3 Nate Graham 2021-08-27 16:52:54 UTC
So you are right-clicking on a file and opening it in Elisa?
Comment 4 empyreal 2021-08-27 17:14:54 UTC
Yes. Elisa is associated with audio file types so I can just press enter.
Comment 5 Nate Graham 2021-08-27 17:48:48 UTC
Ok. So in this case, Elisa opens and I guess you already have some songs in your playlist, right?
Comment 6 empyreal 2021-08-27 18:03:35 UTC
Open any file manager. Click playlist.
Elisa 21.11.70 opens with last status view and playlist not loaded into Playlist window. Clicked playlist do not open in Elisa. Last state opened.
Comment 7 Nate Graham 2021-08-27 18:23:38 UTC
So the bug is that the files you highlighted in your file manager are not added to Elisa's Playlist when it already had some songs in it?
Comment 8 Nate Graham 2021-08-27 18:24:31 UTC
Or is the bug that the existing playlist contents get messed up when you do this? If so, It's probably Bug 437488.
Comment 9 empyreal 2021-08-27 20:19:53 UTC
No. Elisa simply do not load playlist tracks into Playlist.
Playlist file clicked, but nothing - just blank item instead album. I have one album in playlist. I attached screenshot in first comment.
Comment 10 Nate Graham 2021-08-27 20:26:46 UTC
I cannot reproduce the issue. When I open a file from Dolphin in Elisa, Elisa opens, shows the existing playlist, and adds the file from Dolphin to the end of it.

Can you attach a screen recording that illustrates the issue?
Comment 11 Bug Janitor Service 2021-09-11 04:36:04 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 12 empyreal 2021-09-11 15:16:19 UTC
Created attachment 141478 [details]
Playlist opened in Elisa

I just see gray field instead of playlist
Comment 13 Nate Graham 2021-09-14 16:41:25 UTC
Okay so you are trying to open a .m3u file from Dolphin, and it opens in Elisa, but Elisa fails to show the contents properly. Is that an accurate description of the issue?
Comment 14 Nate Graham 2021-09-14 16:45:59 UTC
Can reproduce the issue.
Comment 15 empyreal 2021-09-14 16:48:33 UTC
Exactly!
Comment 16 Bug Janitor Service 2021-12-01 00:13:47 UTC
A possibly relevant merge request was started @ https://invent.kde.org/multimedia/elisa/-/merge_requests/307
Comment 17 Nate Graham 2021-12-01 17:53:17 UTC
Git commit 3c062ad56cce2641bb68867be40381c2f218ab8e by Nate Graham, on behalf of Bharadwaj Raju.
Committed on 01/12/2021 at 17:53.
Pushed by ngraham into branch 'master'.

Refactor and fix opening playlist files

Handle opening files through ElisaApplication::openFiles only, which
handles audio files and playlist files.

In the process, a lot of newly-unnecessary or duplicated code was removed.
FIXED-IN: 22.04

M  +0    -40   autotests/elisaapplicationtest.cpp
M  +0    -2    src/CMakeLists.txt
M  +14   -41   src/elisaapplication.cpp
M  +2    -12   src/elisaapplication.h
D  +0    -15   src/elisaarguments.cpp
D  +0    -50   src/elisaarguments.h
M  +4    -19   src/main.cpp
M  +1    -2    src/qml/ElisaMainWindow.qml

https://invent.kde.org/multimedia/elisa/commit/3c062ad56cce2641bb68867be40381c2f218ab8e