Refactor and fix opening playlist files

Handle opening files through ElisaApplication::openFiles only, which
handles audio files and playlist files.

In the process, a lot of newly-unnecessary or duplicated code was removed.

BUG: 441544
FIXED-IN: 22.04