autotests/elisaapplicationtest.cpp
@@ -43,46 +43,6 @@ private Q_SLOTS:
         qRegisterMetaType<ElisaUtils::PlayListEnqueueMode>("ElisaUtils::PlayListEnqueueMode");
         qRegisterMetaType<ElisaUtils::PlayListEnqueueTriggerPlay>("ElisaUtils::PlayListEnqueueTriggerPlay");
     }
-
-    void setArgumentsTest()
-    {
-        ElisaApplication myApp;
-
-        QSignalSpy argumentsChangedSpy(&myApp, &ElisaApplication::argumentsChanged);
-        QSignalSpy enqueueSpy(&myApp, &ElisaApplication::enqueue);
-
-        auto myTestFile = QFileInfo(QStringLiteral(LOCAL_FILE_TESTS_SAMPLE_FILES_PATH) + QStringLiteral("/music/test.ogg"));
-        auto myDirectory = QDir::current();
-        auto relativePath = myDirectory.relativeFilePath(myTestFile.canonicalFilePath());
-
-        myApp.setArguments({{{}, {}, QUrl::fromLocalFile(relativePath)}});
-
-        QCOMPARE(argumentsChangedSpy.count(), 1);
-        QCOMPARE(enqueueSpy.count(), 1);
-
-        QCOMPARE(myApp.arguments().count(), 1);
-        QCOMPARE(std::get<2>(myApp.arguments().at(0)), QUrl::fromLocalFile(myTestFile.canonicalFilePath()));
-    }
-
-    void activateRequestedTest()
-    {
-        ElisaApplication myApp;
-
-        QSignalSpy argumentsChangedSpy(&myApp, &ElisaApplication::argumentsChanged);
-        QSignalSpy enqueueSpy(&myApp, &ElisaApplication::enqueue);
-
-        auto myTestFile = QFileInfo(QStringLiteral(LOCAL_FILE_TESTS_SAMPLE_FILES_PATH) + QStringLiteral("/music/test.ogg"));
-        auto myDirectory = QDir::current();
-        auto relativePath = myDirectory.relativeFilePath(myTestFile.canonicalFilePath());
-
-        myApp.activateRequested({QString(), relativePath}, QDir::currentPath());
-
-        QCOMPARE(argumentsChangedSpy.count(), 0);
-        QCOMPARE(enqueueSpy.count(), 1);
-
-        QCOMPARE(enqueueSpy.at(0).count(), 3);
-        QCOMPARE(std::get<2>(enqueueSpy.at(0).at(0).value<DataTypes::EntryDataList>().at(0)), QUrl::fromLocalFile(myTestFile.canonicalFilePath()));
-    }
 };
 
 QTEST_MAIN(ElisaApplicationTests)
